PROJECT(native)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)


INCLUDE(${CMAKE_HOME_DIRECTORY}/config/toolchain-cross.cmake)

SET(CMAKE_C_FLAGS "-W -g")
SET(CMAKE_CXX_FLAGS "-W -g -llog -landroid")


FILE(GLOB_RECURSE JNI_C_LIST    "jni/*.c")
FILE(GLOB_RECURSE JNI_CPP_LIST  "jni/*.cpp")

SET (INCLUDE_DIRS "")

INCLUDE_DIRECTORIES(${INCLUDE_DIRS})


ADD_LIBRARY(NativeJNI       SHARED ${JNI_C_LIST})
ADD_LIBRARY(NativeJNI_CPP   SHARED ${JNI_CPP_LIST})



