PROJECT(native_template)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(${CMAKE_HOME_DIRECTORY}/config/toolchain-cross.cmake)

#SET(CMAKE_C_FLAGS "-llog -landroid -pthread")

#FILE(GLOB_RECURSE JNI_LIST 	"jni/c1.c")
#FILE(GLOB_RECURSE JNI_LIST 	"jni/c2.c")

SET(CMAKE_CXX_FLAGS "-llog -landroid -pthread")
FILE(GLOB_RECURSE JNI_LIST 	"jni/c++.cpp")


FILE(GLOB_RECURSE HEADER_LIST "*.h")
SET (INCLUDE_DIRS "")
FOREACH(_HEADERFILE ${HEADER_LIST})
	GET_FILENAME_COMPONENT(_DIR ${_HEADERFILE} PATH)
	LIST(APPEND INCLUDE_DIRS ${_DIR})
ENDFOREACH()

LIST(REMOVE_DUPLICATES INCLUDE_DIRS)

ADD_LIBRARY(native_template SHARED ${JNI_LIST} )

